// Vitest Snapshot v1

exports[`Image > Image baseVue demo works fine 1`] = `
<div
  data-v-app=""
>
  
  <div
    class="image-group"
    data-v-37d8259d=""
  >
    <div
      class="image-demo"
      data-v-37d8259d=""
    >
      <div
        class="t-image t-image--round image-container"
        data-v-37d8259d=""
      >
        <div
          class="t-image__status"
        >
          <svg
            class="t-icon t-icon-ellipsis"
            fill="none"
            height="1em"
            viewBox="0 0 16 16"
            width="1em"
          >
            <path
              d="M3 9a1 1 0 110-2 1 1 0 010 2zM7 8a1 1 0 102 0 1 1 0 00-2 0zM12 8a1 1 0 102 0 1 1 0 00-2 0z"
              fill="currentColor"
              fill-opacity="0.9"
            />
          </svg>
        </div>
        <img
          alt=""
          class="t-image__img"
          src="https://tdesign.gtimg.com/site/upload1.png"
          style="object-fit: cover; object-position: center;"
        />
      </div>
      <p
        class="image-demo-tip"
        data-v-37d8259d=""
      >
        裁切
      </p>
    </div>
    <div
      class="image-demo"
      data-v-37d8259d=""
    >
      <div
        class="t-image t-image--round image-container"
        data-v-37d8259d=""
      >
        <div
          class="t-image__status"
        >
          <svg
            class="t-icon t-icon-ellipsis"
            fill="none"
            height="1em"
            viewBox="0 0 16 16"
            width="1em"
          >
            <path
              d="M3 9a1 1 0 110-2 1 1 0 010 2zM7 8a1 1 0 102 0 1 1 0 00-2 0zM12 8a1 1 0 102 0 1 1 0 00-2 0z"
              fill="currentColor"
              fill-opacity="0.9"
            />
          </svg>
        </div>
        <img
          alt=""
          class="t-image__img"
          src="https://tdesign.gtimg.com/site/upload1.png"
          style="object-fit: contain; object-position: center;"
        />
      </div>
      <p
        class="image-demo-tip"
        data-v-37d8259d=""
      >
        适应高
      </p>
    </div>
    <div
      class="image-demo"
      data-v-37d8259d=""
      style="width: 134px;"
    >
      <div
        class="t-image t-image--round image-container"
        data-v-37d8259d=""
      >
        <div
          class="t-image__status"
        >
          <svg
            class="t-icon t-icon-ellipsis"
            fill="none"
            height="1em"
            viewBox="0 0 16 16"
            width="1em"
          >
            <path
              d="M3 9a1 1 0 110-2 1 1 0 010 2zM7 8a1 1 0 102 0 1 1 0 00-2 0zM12 8a1 1 0 102 0 1 1 0 00-2 0z"
              fill="currentColor"
              fill-opacity="0.9"
            />
          </svg>
        </div>
        <img
          alt=""
          class="t-image__img"
          src="https://tdesign.gtimg.com/site/upload1.png"
          style="object-fit: fill; object-position: center;"
        />
      </div>
      <p
        class="image-demo-tip"
        data-v-37d8259d=""
      >
        拉伸
      </p>
    </div>
  </div>
  <p
    class="summary summary-center"
    data-v-37d8259d=""
  >
    圆角样式
  </p>
  <div
    class="image-group"
    data-v-37d8259d=""
  >
    <div
      class="image-demo"
      data-v-37d8259d=""
    >
      <div
        class="t-image t-image--round image-container"
        data-v-37d8259d=""
      >
        <div
          class="t-image__status"
        >
          <svg
            class="t-icon t-icon-ellipsis"
            fill="none"
            height="1em"
            viewBox="0 0 16 16"
            width="1em"
          >
            <path
              d="M3 9a1 1 0 110-2 1 1 0 010 2zM7 8a1 1 0 102 0 1 1 0 00-2 0zM12 8a1 1 0 102 0 1 1 0 00-2 0z"
              fill="currentColor"
              fill-opacity="0.9"
            />
          </svg>
        </div>
        <img
          alt=""
          class="t-image__img"
          src="https://tdesign.gtimg.com/site/upload1.png"
          style="object-fit: fill; object-position: center;"
        />
      </div>
      <p
        class="image-demo-tip"
        data-v-37d8259d=""
      >
        方形
      </p>
    </div>
    <div
      class="image-demo"
      data-v-37d8259d=""
    >
      <div
        class="t-image t-image--square image-container"
        data-v-37d8259d=""
      >
        <div
          class="t-image__status"
        >
          <svg
            class="t-icon t-icon-ellipsis"
            fill="none"
            height="1em"
            viewBox="0 0 16 16"
            width="1em"
          >
            <path
              d="M3 9a1 1 0 110-2 1 1 0 010 2zM7 8a1 1 0 102 0 1 1 0 00-2 0zM12 8a1 1 0 102 0 1 1 0 00-2 0z"
              fill="currentColor"
              fill-opacity="0.9"
            />
          </svg>
        </div>
        <img
          alt=""
          class="t-image__img"
          src="https://tdesign.gtimg.com/site/upload1.png"
          style="object-fit: fill; object-position: center;"
        />
      </div>
      <p
        class="image-demo-tip"
        data-v-37d8259d=""
      >
        圆角方形
      </p>
    </div>
    <div
      class="image-demo"
      data-v-37d8259d=""
    >
      <div
        class="t-image t-image--circle image-container"
        data-v-37d8259d=""
      >
        <div
          class="t-image__status"
        >
          <svg
            class="t-icon t-icon-ellipsis"
            fill="none"
            height="1em"
            viewBox="0 0 16 16"
            width="1em"
          >
            <path
              d="M3 9a1 1 0 110-2 1 1 0 010 2zM7 8a1 1 0 102 0 1 1 0 00-2 0zM12 8a1 1 0 102 0 1 1 0 00-2 0z"
              fill="currentColor"
              fill-opacity="0.9"
            />
          </svg>
        </div>
        <img
          alt="一张图片"
          class="t-image__img"
          src="https://tdesign.gtimg.com/site/upload1.png"
          style="object-fit: fill; object-position: center;"
        />
      </div>
      <p
        class="image-demo-tip"
        data-v-37d8259d=""
      >
        圆形
      </p>
    </div>
  </div>
  
</div>
`;

exports[`Image > Image mobileVue demo works fine 1`] = `
<div
  class="tdesign-mobile-demo"
  data-v-d8a5fc24=""
>
  <h1
    class="title"
    data-v-d8a5fc24=""
  >
    Image 图片
  </h1>
  <p
    class="summary"
    data-v-d8a5fc24=""
  >
    用于展示效果，主要为上下左右居中裁切、拉伸、平铺等方式。
  </p>
  <div
    class="tdesign-mobile-demo-block"
    data-v-d8a5fc24=""
  >
    <h2
      class="tdesign-mobile-demo-block__title"
    >
      01 类型
    </h2>
    <p
      class="tdesign-mobile-demo-block__summary"
    >
      裁切样式
    </p>
    
    
    <div
      class="image-group"
      data-v-37d8259d=""
    >
      <div
        class="image-demo"
        data-v-37d8259d=""
      >
        <div
          class="t-image t-image--round image-container"
          data-v-37d8259d=""
        >
          <div
            class="t-image__status"
          >
            <svg
              class="t-icon t-icon-ellipsis"
              fill="none"
              height="1em"
              viewBox="0 0 16 16"
              width="1em"
            >
              <path
                d="M3 9a1 1 0 110-2 1 1 0 010 2zM7 8a1 1 0 102 0 1 1 0 00-2 0zM12 8a1 1 0 102 0 1 1 0 00-2 0z"
                fill="currentColor"
                fill-opacity="0.9"
              />
            </svg>
          </div>
          <img
            alt=""
            class="t-image__img"
            src="https://tdesign.gtimg.com/site/upload1.png"
            style="object-fit: cover; object-position: center;"
          />
        </div>
        <p
          class="image-demo-tip"
          data-v-37d8259d=""
        >
          裁切
        </p>
      </div>
      <div
        class="image-demo"
        data-v-37d8259d=""
      >
        <div
          class="t-image t-image--round image-container"
          data-v-37d8259d=""
        >
          <div
            class="t-image__status"
          >
            <svg
              class="t-icon t-icon-ellipsis"
              fill="none"
              height="1em"
              viewBox="0 0 16 16"
              width="1em"
            >
              <path
                d="M3 9a1 1 0 110-2 1 1 0 010 2zM7 8a1 1 0 102 0 1 1 0 00-2 0zM12 8a1 1 0 102 0 1 1 0 00-2 0z"
                fill="currentColor"
                fill-opacity="0.9"
              />
            </svg>
          </div>
          <img
            alt=""
            class="t-image__img"
            src="https://tdesign.gtimg.com/site/upload1.png"
            style="object-fit: contain; object-position: center;"
          />
        </div>
        <p
          class="image-demo-tip"
          data-v-37d8259d=""
        >
          适应高
        </p>
      </div>
      <div
        class="image-demo"
        data-v-37d8259d=""
        style="width: 134px;"
      >
        <div
          class="t-image t-image--round image-container"
          data-v-37d8259d=""
        >
          <div
            class="t-image__status"
          >
            <svg
              class="t-icon t-icon-ellipsis"
              fill="none"
              height="1em"
              viewBox="0 0 16 16"
              width="1em"
            >
              <path
                d="M3 9a1 1 0 110-2 1 1 0 010 2zM7 8a1 1 0 102 0 1 1 0 00-2 0zM12 8a1 1 0 102 0 1 1 0 00-2 0z"
                fill="currentColor"
                fill-opacity="0.9"
              />
            </svg>
          </div>
          <img
            alt=""
            class="t-image__img"
            src="https://tdesign.gtimg.com/site/upload1.png"
            style="object-fit: fill; object-position: center;"
          />
        </div>
        <p
          class="image-demo-tip"
          data-v-37d8259d=""
        >
          拉伸
        </p>
      </div>
    </div>
    <p
      class="summary summary-center"
      data-v-37d8259d=""
    >
      圆角样式
    </p>
    <div
      class="image-group"
      data-v-37d8259d=""
    >
      <div
        class="image-demo"
        data-v-37d8259d=""
      >
        <div
          class="t-image t-image--round image-container"
          data-v-37d8259d=""
        >
          <div
            class="t-image__status"
          >
            <svg
              class="t-icon t-icon-ellipsis"
              fill="none"
              height="1em"
              viewBox="0 0 16 16"
              width="1em"
            >
              <path
                d="M3 9a1 1 0 110-2 1 1 0 010 2zM7 8a1 1 0 102 0 1 1 0 00-2 0zM12 8a1 1 0 102 0 1 1 0 00-2 0z"
                fill="currentColor"
                fill-opacity="0.9"
              />
            </svg>
          </div>
          <img
            alt=""
            class="t-image__img"
            src="https://tdesign.gtimg.com/site/upload1.png"
            style="object-fit: fill; object-position: center;"
          />
        </div>
        <p
          class="image-demo-tip"
          data-v-37d8259d=""
        >
          方形
        </p>
      </div>
      <div
        class="image-demo"
        data-v-37d8259d=""
      >
        <div
          class="t-image t-image--square image-container"
          data-v-37d8259d=""
        >
          <div
            class="t-image__status"
          >
            <svg
              class="t-icon t-icon-ellipsis"
              fill="none"
              height="1em"
              viewBox="0 0 16 16"
              width="1em"
            >
              <path
                d="M3 9a1 1 0 110-2 1 1 0 010 2zM7 8a1 1 0 102 0 1 1 0 00-2 0zM12 8a1 1 0 102 0 1 1 0 00-2 0z"
                fill="currentColor"
                fill-opacity="0.9"
              />
            </svg>
          </div>
          <img
            alt=""
            class="t-image__img"
            src="https://tdesign.gtimg.com/site/upload1.png"
            style="object-fit: fill; object-position: center;"
          />
        </div>
        <p
          class="image-demo-tip"
          data-v-37d8259d=""
        >
          圆角方形
        </p>
      </div>
      <div
        class="image-demo"
        data-v-37d8259d=""
      >
        <div
          class="t-image t-image--circle image-container"
          data-v-37d8259d=""
        >
          <div
            class="t-image__status"
          >
            <svg
              class="t-icon t-icon-ellipsis"
              fill="none"
              height="1em"
              viewBox="0 0 16 16"
              width="1em"
            >
              <path
                d="M3 9a1 1 0 110-2 1 1 0 010 2zM7 8a1 1 0 102 0 1 1 0 00-2 0zM12 8a1 1 0 102 0 1 1 0 00-2 0z"
                fill="currentColor"
                fill-opacity="0.9"
              />
            </svg>
          </div>
          <img
            alt="一张图片"
            class="t-image__img"
            src="https://tdesign.gtimg.com/site/upload1.png"
            style="object-fit: fill; object-position: center;"
          />
        </div>
        <p
          class="image-demo-tip"
          data-v-37d8259d=""
        >
          圆形
        </p>
      </div>
    </div>
    
    
  </div>
  <div
    class="tdesign-mobile-demo-block"
    data-v-d8a5fc24=""
  >
    <h2
      class="tdesign-mobile-demo-block__title"
    >
      02 状态
    </h2>
    <p
      class="tdesign-mobile-demo-block__summary"
    >
      加载中提示
    </p>
    
    <div
      data-v-20e0193e=""
      data-v-d8a5fc24=""
    >
      <div
        class="image-group"
        data-v-20e0193e=""
      >
        <div
          class="image-demo"
          data-v-20e0193e=""
        >
          <div
            class="t-image t-image--round image-container"
            data-v-20e0193e=""
          >
            <div
              class="t-image__status"
            >
              <svg
                class="t-icon t-icon-ellipsis"
                fill="none"
                height="1em"
                viewBox="0 0 16 16"
                width="1em"
              >
                <path
                  d="M3 9a1 1 0 110-2 1 1 0 010 2zM7 8a1 1 0 102 0 1 1 0 00-2 0zM12 8a1 1 0 102 0 1 1 0 00-2 0z"
                  fill="currentColor"
                  fill-opacity="0.9"
                />
              </svg>
            </div>
            <img
              alt=""
              class="t-image__img"
              src=""
              style="object-fit: fill; object-position: center;"
            />
          </div>
          <p
            class="image-demo-tip"
            data-v-20e0193e=""
          >
            默认提示
          </p>
        </div>
        <div
          class="image-demo"
          data-v-20e0193e=""
        >
          <div
            class="t-image t-image--round image-container"
            data-v-20e0193e=""
          >
            <div
              class="t-image__status"
            >
              
              <svg
                class="t-icon t-icon-loading"
                data-v-20e0193e=""
                fill="none"
                height="1em"
                viewBox="0 0 16 16"
                width="1em"
              >
                <path
                  d="M8 1.5a6.5 6.5 0 000 13v-1.63A4.87 4.87 0 1112.88 8h1.62A6.5 6.5 0 008 1.5z"
                  fill="currentColor"
                  fill-opacity="0.9"
                />
              </svg>
              
            </div>
            <img
              alt=""
              class="t-image__img"
              src=""
              style="object-fit: fill; object-position: center;"
            />
          </div>
          <p
            class="image-demo-tip"
            data-v-20e0193e=""
          >
            自定义提示
          </p>
        </div>
      </div>
      <div
        class="tdesign-mobile-demo-block"
        data-v-20e0193e=""
      >
        <!--v-if-->
        <p
          class="tdesign-mobile-demo-block__summary"
        >
          加载失败提示
        </p>
        
        <div
          class="image-group"
          data-v-20e0193e=""
        >
          <div
            class="image-demo"
            data-v-20e0193e=""
          >
            <div
              class="t-image t-image--round image-container"
              data-v-20e0193e=""
            >
              <div
                class="t-image__status"
              >
                <svg
                  class="t-icon t-icon-ellipsis"
                  fill="none"
                  height="1em"
                  viewBox="0 0 16 16"
                  width="1em"
                >
                  <path
                    d="M3 9a1 1 0 110-2 1 1 0 010 2zM7 8a1 1 0 102 0 1 1 0 00-2 0zM12 8a1 1 0 102 0 1 1 0 00-2 0z"
                    fill="currentColor"
                    fill-opacity="0.9"
                  />
                </svg>
              </div>
              <img
                alt=""
                class="t-image__img"
                src="x"
                style="object-fit: fill; object-position: center;"
              />
            </div>
            <p
              class="image-demo-tip"
              data-v-20e0193e=""
            >
              默认提示
            </p>
          </div>
          <div
            class="image-demo"
            data-v-20e0193e=""
          >
            <div
              class="t-image t-image--round image-container"
              data-v-20e0193e=""
            >
              <div
                class="t-image__status"
              >
                <svg
                  class="t-icon t-icon-ellipsis"
                  fill="none"
                  height="1em"
                  viewBox="0 0 16 16"
                  width="1em"
                >
                  <path
                    d="M3 9a1 1 0 110-2 1 1 0 010 2zM7 8a1 1 0 102 0 1 1 0 00-2 0zM12 8a1 1 0 102 0 1 1 0 00-2 0z"
                    fill="currentColor"
                    fill-opacity="0.9"
                  />
                </svg>
              </div>
              <img
                alt=""
                class="t-image__img"
                src=""
                style="object-fit: fill; object-position: center;"
              />
            </div>
            <p
              class="image-demo-tip"
              data-v-20e0193e=""
            >
              自定义提示
            </p>
          </div>
        </div>
        
      </div>
    </div>
    
  </div>
  <div
    class="tdesign-mobile-demo-block"
    data-v-d8a5fc24=""
  >
    <h2
      class="tdesign-mobile-demo-block__title"
    >
      03 规格
    </h2>
    <p
      class="tdesign-mobile-demo-block__summary"
    >
      常用图片尺寸
    </p>
    
    
    <div
      class="image-group"
      data-v-5e203266=""
    >
      <div
        class="image-demo"
        data-v-5e203266=""
      >
        <div
          class="t-image t-image--round image-container"
          data-v-5e203266=""
          style="width: 56px; height: 56px;"
        >
          <div
            class="t-image__status"
          >
            <svg
              class="t-icon t-icon-ellipsis"
              fill="none"
              height="1em"
              viewBox="0 0 16 16"
              width="1em"
            >
              <path
                d="M3 9a1 1 0 110-2 1 1 0 010 2zM7 8a1 1 0 102 0 1 1 0 00-2 0zM12 8a1 1 0 102 0 1 1 0 00-2 0z"
                fill="currentColor"
                fill-opacity="0.9"
              />
            </svg>
          </div>
          <img
            alt=""
            class="t-image__img"
            src="https://tdesign.gtimg.com/site/upload1.png"
            style="object-fit: fill; object-position: center;"
          />
        </div>
        <p
          class="image-demo-tip"
          data-v-5e203266=""
        >
          56
        </p>
      </div>
      <div
        class="image-demo"
        data-v-5e203266=""
      >
        <div
          class="t-image t-image--round image-container"
          data-v-5e203266=""
          style="width: 48px; height: 48px;"
        >
          <div
            class="t-image__status"
          >
            <svg
              class="t-icon t-icon-ellipsis"
              fill="none"
              height="1em"
              viewBox="0 0 16 16"
              width="1em"
            >
              <path
                d="M3 9a1 1 0 110-2 1 1 0 010 2zM7 8a1 1 0 102 0 1 1 0 00-2 0zM12 8a1 1 0 102 0 1 1 0 00-2 0z"
                fill="currentColor"
                fill-opacity="0.9"
              />
            </svg>
          </div>
          <img
            alt=""
            class="t-image__img"
            src="https://tdesign.gtimg.com/site/upload1.png"
            style="object-fit: fill; object-position: center;"
          />
        </div>
        <p
          class="image-demo-tip"
          data-v-5e203266=""
        >
          48
        </p>
      </div>
      <div
        class="image-demo"
        data-v-5e203266=""
      >
        <div
          class="t-image t-image--round image-container"
          data-v-5e203266=""
          style="width: 32px; height: 32px;"
        >
          <div
            class="t-image__status"
          >
            <svg
              class="t-icon t-icon-ellipsis"
              fill="none"
              height="1em"
              viewBox="0 0 16 16"
              width="1em"
            >
              <path
                d="M3 9a1 1 0 110-2 1 1 0 010 2zM7 8a1 1 0 102 0 1 1 0 00-2 0zM12 8a1 1 0 102 0 1 1 0 00-2 0z"
                fill="currentColor"
                fill-opacity="0.9"
              />
            </svg>
          </div>
          <img
            alt=""
            class="t-image__img"
            src="https://tdesign.gtimg.com/site/upload1.png"
            style="object-fit: fill; object-position: center;"
          />
        </div>
        <p
          class="image-demo-tip"
          data-v-5e203266=""
        >
          32
        </p>
      </div>
      <div
        class="image-demo"
        data-v-5e203266=""
      >
        <div
          class="t-image t-image--round image-container"
          data-v-5e203266=""
          style="width: 24px; height: 24px;"
        >
          <div
            class="t-image__status"
          >
            <svg
              class="t-icon t-icon-ellipsis"
              fill="none"
              height="1em"
              viewBox="0 0 16 16"
              width="1em"
            >
              <path
                d="M3 9a1 1 0 110-2 1 1 0 010 2zM7 8a1 1 0 102 0 1 1 0 00-2 0zM12 8a1 1 0 102 0 1 1 0 00-2 0z"
                fill="currentColor"
                fill-opacity="0.9"
              />
            </svg>
          </div>
          <img
            alt=""
            class="t-image__img"
            src="https://tdesign.gtimg.com/site/upload1.png"
            style="object-fit: fill; object-position: center;"
          />
        </div>
        <p
          class="image-demo-tip"
          data-v-5e203266=""
        >
          24
        </p>
      </div>
    </div>
    <div
      class="image-group"
      data-v-5e203266=""
    >
      <div
        class="image-demo"
        data-v-5e203266=""
      >
        <div
          class="t-image t-image--round image-container"
          data-v-5e203266=""
          style="width: 120px; height: 120px;"
        >
          <div
            class="t-image__status"
          >
            <svg
              class="t-icon t-icon-ellipsis"
              fill="none"
              height="1em"
              viewBox="0 0 16 16"
              width="1em"
            >
              <path
                d="M3 9a1 1 0 110-2 1 1 0 010 2zM7 8a1 1 0 102 0 1 1 0 00-2 0zM12 8a1 1 0 102 0 1 1 0 00-2 0z"
                fill="currentColor"
                fill-opacity="0.9"
              />
            </svg>
          </div>
          <img
            alt=""
            class="t-image__img"
            src="https://tdesign.gtimg.com/site/upload1.png"
            style="object-fit: fill; object-position: center;"
          />
        </div>
        <p
          class="image-demo-tip"
          data-v-5e203266=""
        >
          120
        </p>
      </div>
      <div
        class="image-demo"
        data-v-5e203266=""
      >
        <div
          class="t-image t-image--round image-container"
          data-v-5e203266=""
          style="width: 72px; height: 72px;"
        >
          <div
            class="t-image__status"
          >
            <svg
              class="t-icon t-icon-ellipsis"
              fill="none"
              height="1em"
              viewBox="0 0 16 16"
              width="1em"
            >
              <path
                d="M3 9a1 1 0 110-2 1 1 0 010 2zM7 8a1 1 0 102 0 1 1 0 00-2 0zM12 8a1 1 0 102 0 1 1 0 00-2 0z"
                fill="currentColor"
                fill-opacity="0.9"
              />
            </svg>
          </div>
          <img
            alt=""
            class="t-image__img"
            src="https://tdesign.gtimg.com/site/upload1.png"
            style="object-fit: fill; object-position: center;"
          />
        </div>
        <p
          class="image-demo-tip"
          data-v-5e203266=""
        >
          72
        </p>
      </div>
    </div>
    
    
  </div>
</div>
`;

exports[`Image > Image sizeVue demo works fine 1`] = `
<div
  data-v-app=""
>
  
  <div
    class="image-group"
    data-v-5e203266=""
  >
    <div
      class="image-demo"
      data-v-5e203266=""
    >
      <div
        class="t-image t-image--round image-container"
        data-v-5e203266=""
        style="width: 56px; height: 56px;"
      >
        <div
          class="t-image__status"
        >
          <svg
            class="t-icon t-icon-ellipsis"
            fill="none"
            height="1em"
            viewBox="0 0 16 16"
            width="1em"
          >
            <path
              d="M3 9a1 1 0 110-2 1 1 0 010 2zM7 8a1 1 0 102 0 1 1 0 00-2 0zM12 8a1 1 0 102 0 1 1 0 00-2 0z"
              fill="currentColor"
              fill-opacity="0.9"
            />
          </svg>
        </div>
        <img
          alt=""
          class="t-image__img"
          src="https://tdesign.gtimg.com/site/upload1.png"
          style="object-fit: fill; object-position: center;"
        />
      </div>
      <p
        class="image-demo-tip"
        data-v-5e203266=""
      >
        56
      </p>
    </div>
    <div
      class="image-demo"
      data-v-5e203266=""
    >
      <div
        class="t-image t-image--round image-container"
        data-v-5e203266=""
        style="width: 48px; height: 48px;"
      >
        <div
          class="t-image__status"
        >
          <svg
            class="t-icon t-icon-ellipsis"
            fill="none"
            height="1em"
            viewBox="0 0 16 16"
            width="1em"
          >
            <path
              d="M3 9a1 1 0 110-2 1 1 0 010 2zM7 8a1 1 0 102 0 1 1 0 00-2 0zM12 8a1 1 0 102 0 1 1 0 00-2 0z"
              fill="currentColor"
              fill-opacity="0.9"
            />
          </svg>
        </div>
        <img
          alt=""
          class="t-image__img"
          src="https://tdesign.gtimg.com/site/upload1.png"
          style="object-fit: fill; object-position: center;"
        />
      </div>
      <p
        class="image-demo-tip"
        data-v-5e203266=""
      >
        48
      </p>
    </div>
    <div
      class="image-demo"
      data-v-5e203266=""
    >
      <div
        class="t-image t-image--round image-container"
        data-v-5e203266=""
        style="width: 32px; height: 32px;"
      >
        <div
          class="t-image__status"
        >
          <svg
            class="t-icon t-icon-ellipsis"
            fill="none"
            height="1em"
            viewBox="0 0 16 16"
            width="1em"
          >
            <path
              d="M3 9a1 1 0 110-2 1 1 0 010 2zM7 8a1 1 0 102 0 1 1 0 00-2 0zM12 8a1 1 0 102 0 1 1 0 00-2 0z"
              fill="currentColor"
              fill-opacity="0.9"
            />
          </svg>
        </div>
        <img
          alt=""
          class="t-image__img"
          src="https://tdesign.gtimg.com/site/upload1.png"
          style="object-fit: fill; object-position: center;"
        />
      </div>
      <p
        class="image-demo-tip"
        data-v-5e203266=""
      >
        32
      </p>
    </div>
    <div
      class="image-demo"
      data-v-5e203266=""
    >
      <div
        class="t-image t-image--round image-container"
        data-v-5e203266=""
        style="width: 24px; height: 24px;"
      >
        <div
          class="t-image__status"
        >
          <svg
            class="t-icon t-icon-ellipsis"
            fill="none"
            height="1em"
            viewBox="0 0 16 16"
            width="1em"
          >
            <path
              d="M3 9a1 1 0 110-2 1 1 0 010 2zM7 8a1 1 0 102 0 1 1 0 00-2 0zM12 8a1 1 0 102 0 1 1 0 00-2 0z"
              fill="currentColor"
              fill-opacity="0.9"
            />
          </svg>
        </div>
        <img
          alt=""
          class="t-image__img"
          src="https://tdesign.gtimg.com/site/upload1.png"
          style="object-fit: fill; object-position: center;"
        />
      </div>
      <p
        class="image-demo-tip"
        data-v-5e203266=""
      >
        24
      </p>
    </div>
  </div>
  <div
    class="image-group"
    data-v-5e203266=""
  >
    <div
      class="image-demo"
      data-v-5e203266=""
    >
      <div
        class="t-image t-image--round image-container"
        data-v-5e203266=""
        style="width: 120px; height: 120px;"
      >
        <div
          class="t-image__status"
        >
          <svg
            class="t-icon t-icon-ellipsis"
            fill="none"
            height="1em"
            viewBox="0 0 16 16"
            width="1em"
          >
            <path
              d="M3 9a1 1 0 110-2 1 1 0 010 2zM7 8a1 1 0 102 0 1 1 0 00-2 0zM12 8a1 1 0 102 0 1 1 0 00-2 0z"
              fill="currentColor"
              fill-opacity="0.9"
            />
          </svg>
        </div>
        <img
          alt=""
          class="t-image__img"
          src="https://tdesign.gtimg.com/site/upload1.png"
          style="object-fit: fill; object-position: center;"
        />
      </div>
      <p
        class="image-demo-tip"
        data-v-5e203266=""
      >
        120
      </p>
    </div>
    <div
      class="image-demo"
      data-v-5e203266=""
    >
      <div
        class="t-image t-image--round image-container"
        data-v-5e203266=""
        style="width: 72px; height: 72px;"
      >
        <div
          class="t-image__status"
        >
          <svg
            class="t-icon t-icon-ellipsis"
            fill="none"
            height="1em"
            viewBox="0 0 16 16"
            width="1em"
          >
            <path
              d="M3 9a1 1 0 110-2 1 1 0 010 2zM7 8a1 1 0 102 0 1 1 0 00-2 0zM12 8a1 1 0 102 0 1 1 0 00-2 0z"
              fill="currentColor"
              fill-opacity="0.9"
            />
          </svg>
        </div>
        <img
          alt=""
          class="t-image__img"
          src="https://tdesign.gtimg.com/site/upload1.png"
          style="object-fit: fill; object-position: center;"
        />
      </div>
      <p
        class="image-demo-tip"
        data-v-5e203266=""
      >
        72
      </p>
    </div>
  </div>
  
</div>
`;

exports[`Image > Image statusVue demo works fine 1`] = `
<div
  data-v-20e0193e=""
>
  <div
    class="image-group"
    data-v-20e0193e=""
  >
    <div
      class="image-demo"
      data-v-20e0193e=""
    >
      <div
        class="t-image t-image--round image-container"
        data-v-20e0193e=""
      >
        <div
          class="t-image__status"
        >
          <svg
            class="t-icon t-icon-ellipsis"
            fill="none"
            height="1em"
            viewBox="0 0 16 16"
            width="1em"
          >
            <path
              d="M3 9a1 1 0 110-2 1 1 0 010 2zM7 8a1 1 0 102 0 1 1 0 00-2 0zM12 8a1 1 0 102 0 1 1 0 00-2 0z"
              fill="currentColor"
              fill-opacity="0.9"
            />
          </svg>
        </div>
        <img
          alt=""
          class="t-image__img"
          src=""
          style="object-fit: fill; object-position: center;"
        />
      </div>
      <p
        class="image-demo-tip"
        data-v-20e0193e=""
      >
        默认提示
      </p>
    </div>
    <div
      class="image-demo"
      data-v-20e0193e=""
    >
      <div
        class="t-image t-image--round image-container"
        data-v-20e0193e=""
      >
        <div
          class="t-image__status"
        >
          
          <svg
            class="t-icon t-icon-loading"
            data-v-20e0193e=""
            fill="none"
            height="1em"
            viewBox="0 0 16 16"
            width="1em"
          >
            <path
              d="M8 1.5a6.5 6.5 0 000 13v-1.63A4.87 4.87 0 1112.88 8h1.62A6.5 6.5 0 008 1.5z"
              fill="currentColor"
              fill-opacity="0.9"
            />
          </svg>
          
        </div>
        <img
          alt=""
          class="t-image__img"
          src=""
          style="object-fit: fill; object-position: center;"
        />
      </div>
      <p
        class="image-demo-tip"
        data-v-20e0193e=""
      >
        自定义提示
      </p>
    </div>
  </div>
  <div
    class="tdesign-mobile-demo-block"
    data-v-20e0193e=""
  >
    <!--v-if-->
    <p
      class="tdesign-mobile-demo-block__summary"
    >
      加载失败提示
    </p>
    
    <div
      class="image-group"
      data-v-20e0193e=""
    >
      <div
        class="image-demo"
        data-v-20e0193e=""
      >
        <div
          class="t-image t-image--round image-container"
          data-v-20e0193e=""
        >
          <div
            class="t-image__status"
          >
            <svg
              class="t-icon t-icon-ellipsis"
              fill="none"
              height="1em"
              viewBox="0 0 16 16"
              width="1em"
            >
              <path
                d="M3 9a1 1 0 110-2 1 1 0 010 2zM7 8a1 1 0 102 0 1 1 0 00-2 0zM12 8a1 1 0 102 0 1 1 0 00-2 0z"
                fill="currentColor"
                fill-opacity="0.9"
              />
            </svg>
          </div>
          <img
            alt=""
            class="t-image__img"
            src="x"
            style="object-fit: fill; object-position: center;"
          />
        </div>
        <p
          class="image-demo-tip"
          data-v-20e0193e=""
        >
          默认提示
        </p>
      </div>
      <div
        class="image-demo"
        data-v-20e0193e=""
      >
        <div
          class="t-image t-image--round image-container"
          data-v-20e0193e=""
        >
          <div
            class="t-image__status"
          >
            <svg
              class="t-icon t-icon-ellipsis"
              fill="none"
              height="1em"
              viewBox="0 0 16 16"
              width="1em"
            >
              <path
                d="M3 9a1 1 0 110-2 1 1 0 010 2zM7 8a1 1 0 102 0 1 1 0 00-2 0zM12 8a1 1 0 102 0 1 1 0 00-2 0z"
                fill="currentColor"
                fill-opacity="0.9"
              />
            </svg>
          </div>
          <img
            alt=""
            class="t-image__img"
            src=""
            style="object-fit: fill; object-position: center;"
          />
        </div>
        <p
          class="image-demo-tip"
          data-v-20e0193e=""
        >
          自定义提示
        </p>
      </div>
    </div>
    
  </div>
</div>
`;
